git commit -am "Ajout de la fonction checkAnniv()"

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     
 <h1>DATE</h1>
 <script>afficheDate();</script>
+<br/> 
+<h2>Anniversaires :</h2>
+<script>checkAnniv();</script>
   
     
 </body>
